# auto-note

./: .gitignore  README.md  auto-note GUI.lnk  auto-note safe display.lnk  auto-note-gui.bat  auto-note.lnk  pyproject.toml
.github/workflows/: ci.yml
articles/: 2026-06-06-1.md  post.md
docs/: CHANGELOG.md  COMMERCIAL_POLICY_DRAFT.md  INSTALL.md  PRIVACY.md  PRODUCT_READINESS.md  QUICKSTART.md  RC_HANDOFF.md  RELEASE_CHECKLIST.md  SUPPORT.md  TERMS_DRAFT.md  THIRD_PARTY_NOTICES.md  UPDATE.md
examples/: sample.md
scripts/: check-release.ps1  create-gui-shortcut.ps1  ensure-env.bat  install-auto-note.ps1  launch-gui.vbs  smoke-install.ps1  smoke-sales-delivery.ps1  uninstall-auto-note.ps1
shortcuts/: README.md  auto-note-menu.bat  check-notes.bat  copy-note-body.bat  create-gui-shortcut.bat  dashboard-note.bat  install-auto-note.bat  install-image-tools.bat  login-note.bat  new-note.bat  open-articles-folder.bat  post-note-draft.bat  post-note-publish-auto.bat  post-note-publish.bat  uninstall-auto-note.bat
src/auto_note/: __init__.py  __main__.py  acceptance.py  action_plan.py  app_info.py  article.py  autosave.py  backup.py  browser.py  clipboard.py  commercial.py  commercial_setup.py  diagnostics.py  export.py  first_run.py  gui.py  gui_errors.py  history.py  images.py  improvement_plan.py  inspect.py  licenses.py  maintenance.py  manual.py  menu.py  overview.py  paths.py  preflight.py  privacy.py  publish_queue.py  publish_ready.py  quality.py  quickstart.py  readiness.py  release.py  repair.py  review.py  sales_finalize.py  (+16 more)
tests/: test_article.py
