[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-note"
version = "0.1.0"
description = "A small browser automation CLI for drafting and posting note.com articles."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
browser = [
  "playwright>=1.44.0",
]
images = [
  "Pillow>=10.0.0",
]

[project.scripts]
auto-note = "auto_note.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
